Add new theme and custom config

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 locals.zsh
 log/.zsh_history
 projects.zsh
-custom/*
-!custom/example
-!custom/example.zsh
 *.swp
-!custom/example.zshcache
 cache/
+
+### /Users/xiaogaozi/.gitignore-boilerplates/Global/vim.gitignore
+
+.*.sw[a-z]
+*.un~
+Session.vim
+.netrwhist
